Make protocol handler application 'always ask' status be remembered (bug 397906), r+sr=biesi, a=blocking-firefox3+